<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_100"
    android:keepScreenOn="true"
    android:orientation="vertical"
    tools:ignore="ButtonStyle,HardcodedText,NestedWeights" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.60"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:background="@drawable/without_corner_border"
            android:orientation="horizontal"
            android:weightSum="1" >

            <ImageView
                android:id="@+id/arrowImage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.10"
                android:contentDescription="arrow"
                android:paddingBottom="2dp"
                android:paddingLeft="2dp"
                android:paddingTop="2dp"
                android:src="@drawable/arrow" />

            <TextView
                android:id="@+id/titleBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.80"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/md_white_1000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.85"
            android:background="@drawable/border" >

            <fragment
                android:id="@+id/googleMap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                class="com.google.android.gms.maps.SupportMapFragment" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsAndText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.40"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25" >

                <ProgressBar
                    android:id="@+id/distanceProgressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerInParent="true"
                    android:background="@drawable/circle_shape"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="1"
                    android:progressDrawable="@drawable/circular_progressbar" />

                <ImageView
                    android:id="@+id/speedAnimation"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/car_frame_1"
                    android:contentDescription="Car"
                    android:gravity="center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".75" >

                <TextView
                    android:id="@+id/smartTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/md_grey_300"
                    android:gravity="center"
                    android:text="@string/default_smart"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/md_black_1000" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gridLayout"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:weightSum="3" >

            <Button
                android:id="@+id/callBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_action_call"
                android:text="@string/call"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/md_black_1000" />

            <Button
                android:id="@+id/sendSmsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/ic_action_chat"
                android:text="@string/sos"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/md_black_1000" />

            <Button
                android:id="@+id/callPoliceBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/police"
                android:text="@string/police"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/md_black_1000" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>